fix overflow

--- a/app/scss/style.css
+++ b/app/scss/style.css
@@ -74,6 +74,8 @@ html {
   font-size: 100%;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  max-width: 100%;
+  overflow-x: hidden;
 }
 
 *,
@@ -380,7 +382,6 @@ button:hover,
 
 .hero {
   background-color: #fafafa;
-  overflow: hidden;
 }
 
 @media (min-width: 64em) {
